hard-gists/ee9151b0ad985ca348cd/run.log
=== Docker Run Log for ee9151b0ad985ca348cd ===
Started at: Mi 29. Okt 21:03:21 CET 2025

[2025-10-29 21:03:21] START: Running container for ee9151b0ad985ca348cd
[2025-10-29 21:03:21] SUCCESS: Container c3e8f3892348ce5aab5af7c661a02be1485331cc783277082ff4b2dca4f3f9d7 started for ee9151b0ad985ca348cd
=== Container logs for ee9151b0ad985ca348cd ===
  File "/snippet.py", line 34
    print self.dxf
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ee9151b0ad985ca348cd ===
[2025-10-29 21:03:23] INFO: Container c3e8f3892348ce5aab5af7c661a02be1485331cc783277082ff4b2dca4f3f9d7 has stopped
